public/css/src/components/_typo.scss
/* 
 * Links
 */
a {
  color: $color-text;
  text-decoration: none;
  border-bottom: .1em solid rgba($color-text, .2);
  padding-bottom: .05em;

  &:hover {

  }
}





/* 
 * Paragraph
 */
p {
  line-height: 1.65em;
  margin: 1.35em 0;
}





/* 
 * Headings
 */
h1 {
  font: 1em sans-serif;
  margin: 0;
  display: inline;
  font-weight: bold;

  &:hover {

    .separator {
      > span {
        @for $i from 0 through $category-color-list-amount {
          &:nth-child(#{$category-color-list-amount}n+#{$i}) {
            @include animation(lightshow linear .85s infinite backwards (-.85s - (-.5s / $category-color-list-amount * $i)));
          }
        }
      }

    }
  }

  // Separator for the headline
  .separator {
    display: inline;
    margin: 0 0 0 .5em;

    @include breakpoint(tiny) {
      display: none;
    }

    > span {
      font-weight: normal;
      color: $color-grey-light;
      cursor: default;
    }
  }
}

h2 {
  margin: 0;
  font-size: 1.5em;

  @include breakpoint(tiny) {
    font-size: 1.35em;
  }
}

h3 {
  font-size: 1.35em;
  margin: $h3-margin;
}

h4 {

}





/* 
 * Lists
 */
ul,
ol {
  padding: 0 0 0 1.35em;

  > li {
    margin: .45em 0;
  }
}





/* 
 * Horizontal rule
 */
hr {
  border: none;
  background: rgba($color-text, .2);
  height: .1em;
}





/*
 * Blockquote
 */
blockquote {
  
}




/*
 * Code
 */
code {
  white-space: pre;
}

pre {
  overflow: auto;
}

